--- a/Proyecto pre-entrega/Proyecto pre-entrega.csproj
+++ b/Proyecto pre-entrega/Proyecto pre-entrega.csproj
@@ -182,6 +182,10 @@
   <ItemGroup>
     <Compile Include="Clases\Producto.cs" />
     <Compile Include="Clases\ProductoVendido.cs" />
+    <Compile Include="Handlers\ADO_Producto.cs" />
+    <Compile Include="Handlers\ADO_ProductoVendido.cs" />
+    <Compile Include="Handlers\ADO_Usuario.cs" />
+    <Compile Include="Handlers\ADO_Venta.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Clases\Usuario.cs" />
